# django_snippe

./: .gitignore  README.md  pyproject.toml
django_snippe/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  helpers.py  logging.py  models.py  services.py  signals.py  urls.py  validators.py  views.py
django_snippe/migrations/: 0001_initial.py
