[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-snippe"
version = "0.1.0"
description = "Django integration for the Snippe payment gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "django>=4.0",
    "snippe>=0.1.0",
]
keywords = ["django", "snippe", "payments", "mobile money", "fintech", "tanzania"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/cleven12/django-snippe"
Issues = "https://github.com/cleven12/django-snippe/issues"
